--- a/scss/components/_page_content.scss
+++ b/scss/components/_page_content.scss
@@ -66,7 +66,7 @@ h2 {
   background: $color-secondary;
   background: linear-gradient(to right, $color-background 0%, $color-secondary 50%, $color-background 100%) !important;
   border: 1px solid transparent;
-  border-image: linear-gradient(to right, transparent 0%, rgba(82, 165, 248, .5) 50%, transparent 100%);
+  border-image: linear-gradient(to right, transparent 0%, rgba($color-primary, .5) 50%, transparent 100%);
   border-image-slice: 1;
   line-height: 100%;
 
