--- a/scss/components/_scans.scss
+++ b/scss/components/_scans.scss
@@ -13,7 +13,7 @@
 			background: $color-secondary;
 
 			&:first-child {
-			  background: transparent;
+			  //background: transparent;
 
 			  th {
 				//padding: .5rem .125rem;
