--- a/scss/lib/_variables.scss
+++ b/scss/lib/_variables.scss
@@ -1,6 +1,7 @@
 //
 // variables for the skin
 //
+$text-large: 1rem;
 $text-default: .9rem;
 $text-smaller: .8rem;
 $text-small: .75rem;
@@ -18,11 +19,7 @@ $color-secondary-alt: darken($color-secondary, 3%);
 //
 $color-white: #fff;
 $color-offwhite: #cccccc;
-//
 $color-grey: #888888;
-$color-grey-light: grey;
-$color-grey-dark: grey;
-//
 $color-black: #202020;
 $color-black-light: #4D5154;
 $color-black-medium: #384147;
