--- a/scss/components/_alliance_attacks.scss
+++ b/scss/components/_alliance_attacks.scss
@@ -1,120 +1,183 @@
 #page_alliance_attacks {
   .maintext {
-    > table {
-      > thead,
-      > tbody {
-        > tr {
-          background-color: $color-secondary;
+	> table {
+	  > thead,
+	  > tbody {
+		> tr {
+		  background-color: $color-secondary;
 
-          &:nth-child(4n+1) {
-            background-color: $color-secondary-alt;
-          }
+		  &:nth-child(4n+1) {
+			background-color: $color-secondary-alt;
+		  }
 
-          &:first-child th {
-            font-weight: bold;
-			background: $color-bg-th;
-            color: $color-text;
-            font-size: $text-small;
-            padding: .5rem .25rem;
+		  &:first-child th {
+			font-weight: bold;
+			background: #171e27;
+			color: $color-text;
+			font-size: $text-small;
+			padding: .25rem;
 
-            &.right {
-              padding-right: .25rem;
-            }
-          }
+			&.right {
+			  padding-right: .25rem;
+			}
+		  }
 
-          th {
+		  &[id^="target_"] {
+			> td {
+			  background: $color-background;
+			}
 
-          }
+			table {
+			  border-left: 5px double rgba($color-primary, .19);
+			  padding: 0;
+			  margin-left: 2rem;
+			  width: calc(100% - 2rem);
+			  background: $color-background;
 
-          > td {
-            > table {
-              border-spacing: 0;
-              margin: 0;
-              padding-left: 2rem;
+			  tr {
+				&[class^="shadedbackground"] {
+				  background: $color-secondary;
 
-              > tbody {
-                > tr {
-                  > th {
-                    font-size: $text-small;
-                    padding: .25rem;
-                  }
+				  td {
+					border-top: 1px solid rgba($color-primary, .19);
+				  }
 
-                  > th,
-                  > td {
-                    padding: .25rem 0;
+				  &:nth-child(even) {
+					background: $color-secondary-alt;
+				  }
+				}
+			  }
+			}
+		  }
 
-                    &:nth-child(1),
-                    &:nth-child(2) {
-                      text-align: center;
-                    }
+		  th {
+		  }
 
-                    &.center {
-                      text-align: left;
-                      padding-left: 1rem;
-                    }
-                  }
+		  > td {
+			> table {
+			  border-spacing: 0;
+			  margin: 0;
+			  padding-left: 2rem;
 
+			  > tbody {
+				> tr {
+				  > th {
+					font-size: $text-small;
+					padding: .25rem;
+				  }
 
-                  ul {
-                    &.alliance_attack_claims_list {
-                      li {
-                        font-style: italic;
-                        font-size: $text-small;
+				  > th,
+				  > td {
+					padding: .25rem 0;
 
-                        a {
-                          margin: 0;
-                          font-style: normal;
-                        }
+					&:nth-child(1),
+					&:nth-child(2) {
+					  text-align: center;
+					}
 
-                        table {
-                          font-style: normal;
-                        }
-                      }
-                    }
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    }
+					&.center {
+					  text-align: left;
+					  padding-left: 1rem;
+					}
+				  }
+
+				  ul {
+					&.alliance_attack_claims_list {
+					  li {
+						font-style: italic;
+						font-size: $text-small;
+
+						a {
+						  margin: 0;
+						  font-style: normal;
+						}
+
+						table {
+						  font-style: normal;
+						}
+					  }
+					}
+				  }
+				}
+			  }
+			}
+		  }
+		}
+	  }
+	}
   }
 }
-
 
 #attack_claim_form,
 .alliance_attack_claims_status {
   width: auto !important;
-  max-width: 300px;
   border: 1px solid rgba($color-primary, .5);
-  background: $color-secondary;
+  background: $color-background;
 
   table {
-    margin-bottom: 0;
+	margin-bottom: 0;
   }
 }
 
 #attack_claim_form {
+  padding-top: 36px;
+
+  &:before {
+	content: "ATTACK CLAIMS";
+	width: calc(100% - 2px);
+	left: 0px;
+	top: 0;
+	position: absolute;
+	text-align: center;
+	padding: 8px 0;
+	font-size: 1rem;
+	font-weight: bold;
+	text-transform: uppercase;
+	color: $color-offwhite;
+	background: $color-secondary;
+	background: linear-gradient(to right, $color-background 0%, $color-secondary 50%, $color-background 100%) !important;
+	border: 1px solid transparent;
+	border-top: none;
+	border-image: linear-gradient(to right, transparent 0%, rgba(82, 165, 248, .5) 50%, transparent 100%);
+	border-image-slice: 1;
+	line-height: 100%;
+  }
+
+  p {
+	position: absolute;
+	right: 4px;
+	top: 4px;
+  }
+
   table {
-    td:nth-child(2) {
-      padding-left: .25rem !important;
-    }
+	tr {
+	  td {
+		padding-top: .5rem !important;
 
-    input {
-      &:not([type="checkbox"]) {
-        width: 100%;
-        margin: 0;
-      }
+		&:nth-child(2) {
+		  padding-left: .25rem !important;
+		}
 
-      &[type="checkbox"] {
-        margin-left: 0;
-      }
-    }
+		input {
+		  &:not([type="checkbox"]) {
+			width: 100%;
+			margin: 0;
+		  }
+
+		  &[type="checkbox"] {
+			margin-left: 0;
+		  }
+
+		  &[type="submit"] {
+			margin: 0 !important;
+		  }
+		}
+	  }
+	}
   }
 
   .right,
   .left {
-    padding: 0;
+	padding: 0;
   }
 }
