--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -18,6 +18,7 @@
 // necessary stuff, mixins etc
 @import "lib/mixins";
 @import "lib/variables";
+@import "lib/animations";
 //
 // start the actual styles here:
 @import "components/global";
