--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -29,7 +29,7 @@ select,
 
   &:focus {
 	outline: none;
-	border: 1px solid $color-primary;
+	border: 1px solid $color-primary !important;
   }
 }
 
