--- a/scss/components/_planet_details.scss
+++ b/scss/components/_planet_details.scss
@@ -2,16 +2,19 @@
    -------------------------------------------------------*/
 #header {
   grid-column: 2 / 3;
-  padding-top: 0;
+  padding-top: 38px;
   display: flex;
   flex-flow: row wrap;
-  align-content: flex-start;
+  align-content: center;
+  justify-content: space-around;
   background: $color-secondary;
   margin: 0;
   height: unset;
   border: 1px solid transparent;
   border-image: linear-gradient(to right, transparent 0%, rgba($color-primary, .5) 50%, transparent 100%);
   border-image-slice: 1;
+  box-shadow: inset 0 0 8px 2px rgba(0, 0, 0, .25), 0 0 3px 3px rgba(0, 0, 0, .25);
+  position: relative;
   @include respond-below(sm) {
 	grid-row: 1/3;
 	grid-column: 2 / 2;
@@ -29,17 +32,35 @@
 
   > div {
 	width: 50%;
-	padding: 0 .5rem;
+	max-width: 245px;
+	padding: 0 .25rem;
 	display: flex;
 	justify-content: space-evenly;
+	align-items: center;
 	margin: 0 0 .5rem;
+
+	&:last-of-type:nth-of-type(even) {
+	  border-top: 1px solid transparent;
+	  margin-top: .75rem;
+	  padding-top: 4px;
+	  border-image: linear-gradient(to right, transparent 0%, rgba($color-primary, .5) 50%, transparent 100%);
+	  border-image-slice: 1;
+	  justify-content: center;
+	  align-items: baseline;
+
+	  span {
+		max-width: 50px;
+	  }
+	}
   }
 
   #header_mail,
   #header_news {
+	max-width: unset;
 	background: rgba(black, .6);
-	position: relative;
 	transition: ease background-color .5s;
+	position: absolute;
+	top: 0;
 
 	&:hover {
 	  background: rgba(black, 1);
@@ -85,6 +106,7 @@
 	border: 1px solid transparent;
 	border-image: linear-gradient(to left, rgb(60, 107, 156) 0%, #24313f 100%);
 	border-image-slice: 1;
+	left: 0;
 
 	&:hover {
 	  border-image: linear-gradient(to left, $color-primary 0%, #24313f 100%);
@@ -99,6 +121,7 @@
 	border-image: linear-gradient(to right, rgb(60, 107, 156) 0%, #24313f 100%);
 	border-image-slice: 1;
 	border-left: none;
+	right: 0;
 
 	&:hover {
 	  border-image: linear-gradient(to right, $color-primary 0%, #24313f 100%);
@@ -107,11 +130,20 @@
   }
 
   span {
-	flex-basis: 35%;
+	flex-basis: 40%;
   }
 
   .textlabel {
 	margin-left: 0;
+	font-size: $text-small;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	color: #bbb;
+	font-weight: bold;
+
+	&:after {
+	  content: ":";
+	}
   }
 
   .textvalue {
@@ -121,19 +153,19 @@
   }
 
   #header_planet {
+	max-width: unset;
+	height: unset;
+	text-indent: unset;
 	position: absolute;
-	top: .65rem;
-	left: 14px;
-	font-size: 1.5rem;
-	flex-basis: 100%;
-	flex-shrink: 0;
-	color: $color-offwhite;
-	font-size: 1.4rem;
-	letter-spacing: 1px;
-	white-space: nowrap;
+	top: -35px;
+	left: -175px;
 
-	span {
+	span.textlabel {
 	  flex-basis: 100%;
+	  font-size: $text-huge;
+	  letter-spacing: 2px;
+	  text-shadow: 1px 1px 3px black;
+	  white-space: nowrap;
 	}
 
 	.ter,
@@ -142,29 +174,9 @@
 	.zik,
 	.etd {
 	  font-style: italic;
-	  font-size: 1rem;
-	  padding-right: 3px;
+	  font-size: $text-large;
+	  padding-right: 2px;
 	}
-
-	//.ter {
-	//  padding-right: 3px;
-	//}
-	//
-	//.cat {
-	//  padding-right: 3px;
-	//}
-	//
-	//.xan {
-	//  padding-right: 3px;
-	//}
-	//
-	//.zik {
-	//  padding-right: 3px;
-	//}
-	//
-	//.etd {
-	//  padding-right: 2px;
-	//}
   }
 
   #header_metal {
@@ -240,12 +252,15 @@
   //background: linear-gradient(135deg, var(--col-panel-light) 0%, var(--col-panel-dark) 100%);
   display: flex;
   flex-flow: column nowrap;
-  justify-content: space-between;
+  justify-content: space-around;
+  align-items: center;
   height: unset;
   border: 1px solid transparent;
   border-image: linear-gradient(to right, transparent 0%, rgba($color-primary, .5) 50%, transparent 100%);
   border-image-slice: 1;
-  padding: 0;
+  padding: 30px 0 0;
+  box-shadow: inset 0 0 8px 2px rgba(0, 0, 0, .25), 0 0 3px 3px rgba(0, 0, 0, .25);
+  position: relative;
   @include respond-below(sm) {
 	grid-row: 2/3;
 	grid-column: 2 / 2;
@@ -267,6 +282,8 @@
 	border-image: linear-gradient(to right, transparent 0%, rgba($color-primary, .5) 50%, transparent 100%);
 	border-image-slice: 1;
 	transition: ease all 0.5s;
+	position: absolute;
+	top: 0;
   }
 
   &:hover {
@@ -275,9 +292,19 @@
 	}
   }
 
+  > div {
+	width: 350px;
+  }
+
   .textlabel {
+	margin-left: 0;
+	font-size: $text-small;
+	letter-spacing: .5px;
+	text-transform: uppercase;
+	color: #bbb;
+	font-weight: bold;
 	padding: 0 .5rem;
-	flex-basis: 8rem;
+	flex-basis: 9rem;
   }
 }
 
@@ -292,13 +319,28 @@
   margin: .5rem 0;
   padding: 0;
   display: flex;
+  align-items: center;
   flex-flow: row wrap;
+
+  span {
+	&#planet_summary_construction_queue,
+	&#planet_summary_research_queue {
+	  position: relative;
+
+	  span.tooltip {
+		white-space: nowrap;
+		top: auto !important;
+		left: 0 !important;
+		transform: translateX(-100%);
+	  }
+	}
+  }
 }
 
 #planet_summary_construction_complete,
 #planet_summary_research_complete,
 .planet_summary_production_orders {
-  margin: 0 .5rem 0 8rem;
+  margin: 0 .5rem 0 9rem;
   padding: 0;
   text-align: left;
   width: 100%;
@@ -310,7 +352,6 @@
 	flex: 1;
   }
 }
-
 
 .planet_summary_production_shipname {
   display: inline-block;
