--- a/scss/components/_universe.scss
+++ b/scss/components/_universe.scss
@@ -6,7 +6,6 @@
 
   #contents {
 	.container {
-
 	  &:nth-last-child(2),
 	  &:nth-last-child(3) {
 		table {
@@ -164,6 +163,84 @@
   }
 }
 
+#page_universe_races {
+  #intel {
+	+ .container {
+	  table {
+		margin-bottom: 0;
+
+		tr {
+		  td {
+			a {
+			  transition: ease all .3s;
+			}
+
+			&:nth-child(2) {
+			  a {
+				color: $color-terran !important;
+				border-color: $color-terran !important;
+
+				&:hover {
+				  color: $color-background !important;
+				  background-color: $color-terran !important;
+				}
+			  }
+			}
+
+			&:nth-child(3) {
+			  a {
+				color: $color-cathaar !important;
+				border-color: $color-cathaar !important;
+
+				&:hover {
+				  color: $color-background !important;
+				  background-color: $color-cathaar !important;
+				}
+			  }
+			}
+
+			&:nth-child(4) {
+			  a {
+				color: $color-xandathrii !important;
+				border-color: $color-xandathrii !important;
+
+				&:hover {
+				  color: $color-background !important;
+				  background-color: $color-xandathrii !important;
+				}
+			  }
+			}
+
+			&:nth-child(5) {
+			  a {
+				color: $color-zikonian !important;
+				border-color: $color-zikonian !important;
+
+				&:hover {
+				  color: $color-background !important;
+				  background-color: $color-zikonian !important;
+				}
+			  }
+			}
+
+			&:nth-child(6) {
+			  a {
+				color: $color-eitraides !important;
+				border-color: $color-eitraides !important;
+
+				&:hover {
+				  color: $color-background !important;
+				  background-color: $color-eitraides !important;
+				}
+			  }
+			}
+		  }
+		}
+	  }
+	}
+  }
+}
+
 #intel {
   margin: 36px 0 0;
   position: relative;
@@ -224,9 +301,11 @@
 }
 
 .relations_own_member,
+.relations_friendly,
 .relations_neutral,
 .relations_nap,
 .relations_war,
+.relations_hostile,
 .relations_allied {
   outline: none;
 }
@@ -242,14 +321,20 @@
 	background-color: $color-secondary-alt;
   }
 }
+.relations_hostile {
+  background: rgba($color-negative, .125) !important;
+}
 
 .relations_nap {
   background: rgba($color-neutral, .2) !important;
 }
 
+.relations_allied {
+  background: rgba($color-neutral, .3) !important;
+}
+
 .relations_friendly {
   background: rgba($color-positive, .15) !important;
-  outline: none;
 }
 
 .relations_allied {
@@ -361,6 +446,18 @@
   }
 }
 
+#page_universe_feed {
+  table {
+	tr {
+	  &:first-child {
+		td {
+		  background: $color-secondary-alt;
+		}
+	  }
+	}
+  }
+}
+
 #page_universe,
 #page_universe_launches,
 #page_universe_covert_ops {
@@ -449,29 +546,34 @@
 	  min-width: 700px;
 	}
 
-	tr {
-	  &:first-child {
+	table {
+	  width: auto;
+	  min-width: 450px;
+
+	  tr {
+
+		th,
 		td {
-		  background: transparent !important;
+		  padding: 0 .75rem;
 		}
-	  }
 
-	  th {
-		&:empty {
-		  background: transparent !important;
+		th {
+		  &:empty {
+			background: transparent !important;
+		  }
 		}
-	  }
 
-	  td {
-		&[colspan="8"] {
-		  background: transparent !important;
+		td {
+		  &[colspan="8"] {
+			background: transparent !important;
+		  }
 		}
-	  }
 
-	  br {
-		content: "";
-		margin: 2rem;
-		display: block;
+		br {
+		  content: "";
+		  margin: 2rem;
+		  display: block;
+		}
 	  }
 	}
   }
@@ -479,6 +581,55 @@
   #tab1 {
 	width: auto;
 	min-width: 700px;
+
+	table {
+	  width: auto;
+	  min-width: 450px;
+
+	  th,
+	  td {
+		padding: 0 .75rem;
+
+		&:empty {
+		  background: transparent;
+		}
+	  }
+	}
+
+	.container {
+	  &:first-child {
+		table {
+		  tr {
+			&:first-child {
+			  th {
+				&:empty {
+				  background: transparent;
+				}
+
+				&:nth-child(2) {
+				  padding: .25rem;
+				  color: $color-text;
+				  background: transparent;
+				  background: linear-gradient(to right, $color-background 0%, rgba($color-negative, .25) 50%, $color-background 100%) !important;
+				  border: 1px solid transparent;
+				  border-image: linear-gradient(to right, transparent 0%, rgba($color-negative, .5) 50%, transparent 100%);
+				  border-image-slice: 1;
+				}
+
+				&:nth-child(4) {
+				  padding: .25rem;
+				  color: $color-text;
+				  background: linear-gradient(to right, $color-background 0%, rgba($color-positive, .2) 50%, $color-background 100%) !important;
+				  border: 1px solid transparent;
+				  border-image: linear-gradient(to right, transparent 0%, rgba(limegreen, .3) 50%, transparent 100%);
+				  border-image-slice: 1;
+				}
+			  }
+			}
+		  }
+		}
+	  }
+	}
   }
 
   #tab2 {
@@ -487,6 +638,12 @@
 	  position: relative;
 
 	  tr {
+		&:first-child {
+		  td {
+			background: transparent !important;
+		  }
+		}
+
 		&[class^="relations"] {
 		  position: relative;
 
@@ -495,13 +652,13 @@
 			border: 1px solid transparent;
 			border-image: linear-gradient(to right, transparent 0%, rgba($color-primary, .5) 50%, transparent 100%);
 			border-image-slice: 1;
-			padding: 6px;
+			padding: 6px !important;
 			font-size: $text-default;
 		  }
 
 		  + tr th {
-			padding: 15px 0 5px;
-			font-size: $text-smaller;
+			padding: 15px 0 5px !important;
+			font-size: $text-small;
 		  }
 
 		  &:after {
@@ -515,12 +672,42 @@
 		  }
 		}
 
+		&.relations_war {
+		  background: linear-gradient(to right, $color-background 0%, rgba($color-negative, .25) 50%, $color-background 100%) !important;
+		}
+
+		&.relations_hostile {
+		  background: linear-gradient(to right, $color-background 0%, rgba($color-negative, .125) 50%, $color-background 100%) !important;
+		  outline: none;
+		}
+
 		&.relations_neutral {
 		  background: linear-gradient(to right, $color-background 0%, $color-secondary 50%, $color-background 100%) !important;
 		}
 
+		&.relations_nap {
+		  background: linear-gradient(to right, $color-background 0%, rgba($color-neutral, .25) 50%, $color-background 100%) !important;
+		}
+
+		&.relations_friendly {
+		  background: linear-gradient(to right, $color-background 0%, rgba($color-positive, .15) 50%, $color-background 100%) !important;
+		  outline: none;
+		}
+
+		&.relations_allied {
+		  background: linear-gradient(to right, $color-background 0%, rgba($color-neutral, .3) 50%, $color-background 100%) !important;
+		}
+
 		&.relations_own_member {
 		  background: linear-gradient(to right, $color-background 0%, rgba($color-own, .25) 50%, $color-background 100%) !important;
+		}
+
+		th,
+		td {
+		  &:empty,
+		  &[colspan="8"] {
+			background: transparent !important;
+		  }
 		}
 
 		th {
@@ -548,7 +735,7 @@
 			  border-image: linear-gradient(to right, transparent 25%, rgba(limegreen, .3) 50%, transparent 75%);
 			  border-image-slice: 1;
 			  padding: 5px 0;
-			  font-size: $text-smaller;
+			  font-size: $text-small;
 			}
 		  }
 		}
@@ -559,5 +746,42 @@
   .pagination_stats,
   p.left {
 	text-align: center;
+  }
+}
+
+[id^="page_universe"] {
+  .container {
+	&#javascriptwarning {
+	  + .container,
+	  + #tab_container {
+		table {
+		  margin-bottom: 1rem;
+
+		  tr {
+			&:first-child {
+			  td {
+				background: transparent !important;
+				padding: 0 !important;
+			  }
+			}
+		  }
+		}
+	  }
+	}
+  }
+
+  table {
+	width: auto !important;
+	min-width: 450px;
+	margin-bottom: 2.5rem;
+
+	th,
+	td {
+	  padding: .25rem .75rem !important;
+
+	  &:empty {
+		background: transparent;
+	  }
+	}
   }
 }
