--- a/scss/components/_alliance_attacks.scss
+++ b/scss/components/_alliance_attacks.scss
@@ -2,7 +2,9 @@
   .container {
 	&#javascriptwarning {
 	  + .container + .container,
-	  + .container + .container + .container {
+	  + .container + .container + .container,
+	  + #notice + .container + .container,
+	  + #notice + .container + .container + .container {
 		> .maintext {
 		  > table {
 			tr {
