--- a/scss/components/galaxy_status.scss
+++ b/scss/components/galaxy_status.scss
@@ -5,6 +5,12 @@
 		table {
 
 		  tr {
+			&.mission_return {
+			  background: rgba($color-grey, .1);
+			  color: $color-offwhite;
+			  opacity: 1;
+			}
+
 			td {
 			  &.mission_return {
 				background: rgba($color-grey, .5);
