--- a/scss/components/_buttons_links.scss
+++ b/scss/components/_buttons_links.scss
@@ -80,9 +80,12 @@ ul.alliance_attack_claims_list a,
   border-radius: 3px;
   text-transform: initial;
   font-weight: initial;
-  transition: .75s;
   font-family: inherit;
   font-size: 1rem;
+
+  transition-property: color, background, box-shadow;
+  transition-duration: .75s;
+  transition-timing-function: linear;
 
   &:hover {
 	text-decoration: none !important;
