--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -8,7 +8,7 @@
 #menu {
   grid-column: 1 / 2;
   grid-row: 1 / 3;
-  padding: 1rem 0;
+  padding: .5rem 0 1rem;
   background: $color-secondary;
   @include respond-below(sm) {
 	grid-column: 1 / 2;
@@ -44,7 +44,7 @@
 	}
 
 	&:nth-child(n+3) {
-	  margin-top: .75rem;
+	  margin-top: .25rem;
 	}
   }
 
